--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: Two steps forward, one step back
+title: Two Forward, One Back
+subtitle: Projects, Analysis, Presentations, and Writing
 use-site-title: true
 ---
 
