--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Two Forward, One Back
+title: William Hoppes
 subtitle: Projects, Analysis, Presentations, and Writing
 use-site-title: true
 ---
